# example-axum

./: .gitignore  Cargo.toml
examples/: static.rs
