[package]
name = "rust-template"
version = "0.0.0-develop"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.4.8"
thiserror = "1"
tokio = { version = "1.17", features = ["full"] }
tower-http = { version = "0.2", features = ["fs", "trace"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
